Fixes for Navigation bar alignment..

--- a/HexiCloud/public_html/css/hc-navigationbar.css
+++ b/HexiCloud/public_html/css/hc-navigationbar.css
@@ -173,7 +173,7 @@ navigationbarleft {
     padding-top: 15px;
     padding-bottom: 15px;
     border-top: 1px #FFFFFF solid;
-    padding-left: 130px;
+    padding-left: 70px;
 }
 /*
 .navigation-left .logout span {
